<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="result"
        android:textSize="30sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/num1_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num1"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/num2_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num2"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/ok_btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:text="+"/>

    <Button
        android:id="@+id/ok_btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:text="/"/>
</LinearLayout>